--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -26,6 +26,7 @@ jobs:
           pip install mkdocs-material
           pip install mkdocs-awesome-pages-plugin
           pip install mkdocs-macros-plugin
+          pip install pymdown-extensions
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
